server/compilers/goLiteJS/src/test/ml2/valid/forloop1.go
package main
//Error: Not a complete return for if 
func f1() {
    
}
func f2() {
    
}
func f3() {
    
}
func main() {
    for a,c  := 3,4;a< 4;a++ {
        print(a)
        var a float64 = 32.2
    }
    switch x:=4; x{
        case 1, 4,1,2,3: f1()
            var f = 12;
            print(x)
            var x bool = true
            var ds = !x
        case 2: f2()
            var sd bool = true
        case 3: f3()
    }

}


