server/compilers/goLiteJS/src/test/ml2/invalid/invreturn5.go
package main
//Error: Switch statement missing default

func main() bool{
    var b bool = true;
    for a := 1;a<4;a++ {
        print(a)
    }
    switch b {
        case true:
            break;
            return b;
        case false:
            break;
            return b;
    }
    var da [3]int;
    type sum int;
    var d sum = sum(3);
    print(d);
    da[d] = 23;
}
